fix: inmutable list issue